--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Yellowtail&display=swap');
 
 /* Box sizing rules */
 *,
@@ -33,7 +34,7 @@ select {
 
 body {
   background: var(--black);
-  font-family: "Inter", sans-serif;
+  font-family: "Acme", sans-serif;
   color: var(--white);
   display: flex;
   margin: 0;
@@ -41,5 +42,5 @@ body {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 4rem;
 }
